--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
 }
+
 .wrapper {
   max-width: 1366px;
   margin: 0 auto;
@@ -15,7 +16,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 85px;
   font-size: 20px;
   line-height: 20px;
   color: black;
@@ -23,21 +23,24 @@
 	.navbar__menu {
  		display: flex;
 	}
-	.menu__item {
-  		padding: 0 35px;
-	}
+		.menu__item {
+  			padding: 0 35px;
+		}
 	.navbar__login {
   		display: flex;
 	}
-	.login__signin {
-  		display: flex;
-  		align-items: center;
- 		 padding: 0 30px;
-	}
-	.login__button {
-  		padding: 13px 50px;
- 		background-color: #01996d;
-	}
+		.login__signin {
+  			display: flex;
+  			align-items: center;
+ 			padding: 0 30px;
+		}
+		.login__button {
+  			padding: 13px 50px;
+ 			background-color: #01996d;
+			color: white;
+		}
+
+
 
 a:visited,
 a:link,
@@ -46,6 +49,25 @@ a:active {
   text-decoration: none;
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+@media all and (max-width: 360px) {
+	.wrapper {
+		max-width: 100%;
+	}
+	.navbar {
+		flex-flow: column nowrap;
+	}
+		.navbar__menu {
+			flex-flow: column nowrap;
+		}
+		.navbar__login {
+			flex-flow: column nowrap;
+		}
+			.login__signin {
+				display: flex;
+				justify-content: center;
+				padding: 0;
+			}
 }
 
 
