--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@
 			margin: 50px 0 0;
 		}
 	.w-video {
-		max-width: 1500px;
+		max-width: 1600px;
 	}
 	.video__content {
 		background-color: #245852;
@@ -182,7 +182,6 @@
 		flex-flow: column nowrap;
 		align-items: flex-start;
 		padding: 0 60px 0;
-		word-wrap: ;
 	}
 	.title-upper {
 		font-family: Georgia;
@@ -195,16 +194,71 @@
 		line-height: 150%;
 		padding: 33px 0 57px;
 	}
-	.video-player {
-
-	}
-
 	.card__button > a {
 		display: block;
     height: 100%;
     width: 100%;
 	}
-
+.our-product__container {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	margin: 120px 0 0;
+}
+	.product__photo, .product__card {
+		max-width: 45%;
+	}
+.product__photo {
+	position: relative;
+}
+	.photo__mini-card {
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	width: fit-content;
+	position: absolute;
+	background-color: white;
+	bottom: 0;
+	left: -60px;
+	padding: 23px 61px 30px;
+	}
+		.mini-card__title {
+			/* Customized For */
+			padding: 0 0 8px;
+			font-weight: 600;
+			font-size: 15px;
+			line-height: 23px;
+			text-align: center;
+		}	
+		.mini-card__line {
+			height: 1px;
+			width: 110px;
+			background-color: black;
+		}
+		.mini-card__photo {
+			padding: 14px 0 10px;
+		}
+		.mini-card__name {
+			font-size: 12px;
+			line-height: 19px;
+		}
+		.mini-card__title-bottom {
+			font-family: Georgia;
+			font-style: normal;
+			font-weight: bold;
+			font-size: 16px;
+			line-height: 25px;
+			padding: 20px 0 8px;
+		}
+		.mini-card__list {
+			font-size: 11px;
+			line-height: 17px;
+			display: flex;
+			align-self: flex-start;
+		}
+			.li {
+				padding: 8px 0;
+			}
 
 
 
@@ -247,9 +301,6 @@ a:active {
 					background-color: #00523a;
 					color: white;
 				}
-		.header__background {
-			/* background-size: cover; */
-		}
 			.background__card {
 				width: 100%;
 				padding: 100px 0;
@@ -267,6 +318,56 @@ a:active {
 		}
 		.title-bottom {
 			padding: 10px 0 30px;
+		}
+	.our-product__container {
+		flex-flow: column nowrap;
+		align-items: center;
+		margin: 60px 0 0;
+
+	}
+		.product__photo, .product__card {
+			max-width: 100%;
+		}
+		.product__card {
+			margin: 70px 0 0;
+		}
+		.product__card > .box__text {
+			padding: 50px 0;
+		}
+		.product__photo > img {
+			width: 100%;
+		}
+		.photo__mini-card {
+			position: relative;
+			width: 100%;
+			left: 0;
+			padding: 25px 0;
+			border-radius: 18px;
+			box-shadow: 0px 3px 1px 1px rgba(0, 0, 0, 0.267);
+		}
+		.mini-card__title {
+			font-size: 25px;
+			line-height: 33px;
+			padding: 0 0 20px;
+		}
+		.mini-card__photo {
+			padding: 20px 0 15px;
+		}
+		.mini-card__name {
+			font-size: 22px;
+			line-height: 30px;
+			padding: 0;
+		}
+		.mini-card__title-bottom {
+			font-size: 26px;
+			line-height: 34px;
+			padding: 20px 0;
+			align-self: center;
+		}
+		.mini-card__list {
+			font-size: 27px;
+			line-height: 35px;
+			align-self: center;
 		}
 }
 @media all and (min-width: 1024px) {
@@ -315,6 +416,9 @@ a:active {
 	}
 }
 @media all and (max-width: 768px) {
+	.wrapper {
+		padding: 15px;
+	}
 	.header__background > .wrapper {
 		padding-top: 75px;
 	}
@@ -338,6 +442,9 @@ a:active {
 	}
 }
 @media all and (max-width: 360px) {
+	.wrapper {
+		padding: 10px;
+	}
 	.navbar {
 		font-size: 22px;
 		}
@@ -347,8 +454,14 @@ a:active {
 		.login__button {
 			padding: 10px 40px;
 		}
-	.title__bottom, .card__title, .title-upper  {
-		font-size: 45px;
+	.title__bottom, .card__title  {
+		font-size: 40px;
+	}
+	.title-upper {
+		font-size: 35px;
+	}
+	.photo__mini-card {
+		box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.267);
 	}
 }
 
